--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>
         <h1>DRAGON BALL</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quas cumque quaerat, et voluptatibus dicta ex harum minus quasi adipisci voluptate velit dignissimos placeat expedita nam, voluptatum assumenda delectus facilis.</p>
     </div>
 
     
